# waverless

./: .cursorrules  .cursorrules copy  .gitignore  Cargo.toml  DEPLOY.md  README.md  apps.yaml  async_init_map.md  batch_data_enhancement_plan.md  build.rs  claude_notes.md  compile_demo_wasm.sh  compilelog  debug  design 1.canvas  design.canvas  design.canvas.tmp.20250206220621  design.canvas.tmp.20250206221714  design.canvas.tmp.20250206221714.backup  design_of_new_batch.md  entrypoint.sh  http_test.py  modules.yml  node1_config.yaml  node2_config.yaml  node3_config.yaml  node_config.yaml  package.json  plan.md  pnpm-lock.yaml  prepare_fns.py  review.md  update_batch_transfer.md  update_error_types.md  update_write_data_batch.md
.github/workflows/: build.yml  ci.yml
apps/_wasm_serverless_lib/: Cargo.toml
apps/fn2/: Cargo.toml  app.yaml
apps/longchain/: Cargo.toml  app.yaml
apps/panote_auth/: Cargo.toml  app.yaml
apps/panote_content/: app.yaml
apps/panote_list/: app.yaml
apps/word_count/: Cargo.toml  app.yaml
demos/_java_serverless_lib/: pom.xml
demos/fn2/: Cargo.toml  app.yaml
demos/java_web/: .gitignore  app.yml  pom.xml
demos/longchain/: app.yaml
demos/word_count/: app.yaml
docker/WasmEdge/: Dockerfile  build_image.sh  wasm_edge.py
docker/WasmServerless/: Dockerfile  build_image.sh  wasm_serverless_entrypoint.sh
docker/deploy_cluster/: build_remote_images.py  docker-stack.yml  node_config.yaml  prepare.py  stack_remove_all.sh  stack_up.sh  traffic_control.sh
docker/deploy_single_node/: docker-compose.yml
scripts/: .gitignore  ans_integity_test.yml  http_api_generator.py  http_conf.yaml  http_test.py  install_docker.sh  install_protobuf.sh  install_rust.sh  install_wasmedge.sh  mount_s3fs.sh  sync_md_files.py  test_design_json_tool.py  update_rdme.py
scripts/apis/: upload_app.py
scripts/deploy_cluster/: .gitignore  0.setup_ansible_ssh.py  1.1.gen_ansible_conf.py  1.ansible_setup.py  1.install_remote_env.py  2.1_gen_each_node_compose.py  2.ans_redeploy_cluster.sh  2.ans_redeploy_cluster.yml  2.pack_local.py  2.redeploy.sh  3.1.repack_local.py  3.deploy.py  3.undeploy.sh  _ans_build_cluster_docker_stack.yml  _gen_app_need_data.py  _gen_each_node_compose.py  ans_redeploy_cluster.yml  ans_undeploy_cluster.yml  deploy_config.yaml  deploy_config_tmp.yml  node_config.yaml  node_config_tmp.yaml
scripts/deploy_monitor/: docker-compose.yaml  loki.yaml  prometheus.yml  reload_prometheus.py  start.py
scripts/deploy_single_node/: .gitignore  1.ans_build.py  1.ans_build.sh  1.ans_build.yml  1.ansible_setup.sh  1.install_build.py  2.build_all.py  2.update_bin.py  3.run.py  ans_build.yml  ci.sh  node_config.yaml  run_ans_build.sh  run_node.sh
scripts/install/: .gitignore  1.install_basic.sh  2.1_ans_install_wasmedge.yml  2.1install_wasmedge.py  2.2install_clang.py  2.3install_java_related.py  2._ans_install_build.yml  2.ans_install_build.py  2.ans_install_build.sh  2.ans_install_build.yml  2.install_build.py  3.install_docker.sh  4.install_ui_tool.py  _ans_install.yml  _ans_install_build.yml  _ans_install_docker.yml  _ans_install_wasmedge.yml  ans_install_build.yml  install_ansible.sh  install_docker.sh  run_ans_install_build.sh  (+1 more)
src/: apis.rs  cmd_arg.rs  config.rs  data_router.rs  data_router_client.rs  error_collector.rs  errors.rs  host_funcs.rs  logical_modules_view.rs  main.rs  module_iter.rs  module_state_trans.rs  module_view.rs  result.rs  sys.rs  util.rs
src/main/: Cargo.toml  build.rs
src/main/src/: apis.rs  config.rs  main.rs  metrics.rs  module_state_trans.rs  result.rs  sys.rs  util.rs
src/main/src/general/: kv_interface.rs  m_data_general.rs  m_dist_lock.rs  m_kv_store_engine.rs  m_metric_publisher.rs  mod.rs  test_utils.rs
src/main/src/general/app/: http.rs  m_executor.rs  mod.rs  v_os.rs
src/main/src/general/app/app_native/: app_checkpoint.rs  mod.rs
src/main/src/general/app/app_owned/: mod.rs  wasm.rs
src/main/src/general/app/app_owned/wasm_host_funcs/: kv.rs  mod.rs  result.rs
src/main/src/general/app/app_shared/: java.rs  mod.rs  process.rs  process_instance_man_related.rs  process_rpc.rs  process_rpc_proto.proto  process_rpc_proto_ext.rs
src/main/src/general/app/instance/: m_instance_manager.rs  mod.rs
src/main/src/general/data/: kv_interface.rs  m_dist_lock.rs  m_kv_store_engine.rs  m_kv_user_client.rs  mod.rs
src/main/src/general/data/m_data_general/: README.md  batch.md  batch.rs  batch_handler.rs  data.rs  dataitem.md  dataitem.rs  http.rs  mod.md  mod.rs  mod.rs.bak
src/main/src/general/m_appmeta_manager/: http.rs  mod.rs
src/main/src/general/m_os/: mod.rs  zip.rs
src/main/src/general/metrics/: collector.rs  mod.rs  types.rs
src/main/src/general/network/: m_p2p.rs  m_p2p_quic.rs  mod.rs  msg_pack.rs  proto_ext.rs  rpc_model.rs
src/main/src/general/network/proto_ext/: data_ope_role.rs  mod.rs
src/main/src/general/network/proto_src/: data.proto  kv.proto  sche.proto
src/main/src/master/: m_data_master.rs  m_http_handler.rs  m_master.rs  m_master_kv.rs  mod.rs
src/main/src/master/app/: fddg.rs  m_app_master.rs  mod.rs  test.rs
src/main/src/master/data/: m_data_master.rs  mod.rs
src/main/src/master/metrics/: aggregator.rs  mod.rs
src/main/src/modules_global_bridge/: mod.rs  process_func.rs
src/main/src/util/: command.rs  mod.rs  zip.rs
src/main/src/util/container/: async_init_map.rs  map.rs  mod.rs  sync_trie.rs
src/main/src/util/syntactic_discipline/: mod.rs  with_option.rs
src/main/src/worker/: m_data_follower.rs  m_executor.rs  m_http_handler.rs  m_kv_user_client.rs  m_worker.rs  mod.rs
src/main/src/worker/func/: m_instance_manager.rs  mod.rs
src/main/src/worker/func/fn_event/: kv_event.rs
src/main/src/worker/func/shared/: java.rs  process.rs  process_instance_man_related.rs  process_rpc.rs
src/main/src/worker/func/wasm_host_funcs/: kv.rs  mod.rs
telego/: README
test/: http_test.py  stress_on_single_fn.py
waverless_ui/: Dockerfile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
ws_derive/: Cargo.toml
(+221 files in other folders)
