[package]
name = "wasm_serverless"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.50"
async-trait = "0.1.74"
qp2p = { path = "qp2p" }                            #"0.36.4"
tokio = { version = "1.32.0", features = ["full"] }
prost = "0.11"
parking_lot = "0.11.1"
# raft = { version = "0.7.0", default-features = false, features = [
#     "prost-codec",
# ] } # tikv raft
async-raft = "0.6.1"
tracing = "0.1.40"
# openraft = "0.8"
serde = "1.0.126"
serde_json = "1.0.64"
serde_yaml = "0.9"
anyhow = "1.0.75"
slog = "2.2"
slog-async = "2.3.0"
slog-term = "2.4.0"
regex = "1"
camelpaste = "0.1.0"
tracing-subscriber = "0.3"
ws_derive = { path = "./ws_derive" }
clap = { version = "3", features = ["derive"] }
downcast-rs = "1.2.0"
bincode = "1.3.3"

# slog-envlogger = { version = "2.1.0", optional = true }

[build-dependencies]
prost-build = { version = "0.12" }
