[package]
name = "wasm_serverless"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qp2p = "0.36.4"                                     #{ path = "qp2p" }
tokio = { version = "1.32.0", features = ["full"] }
thiserror = "1.0.50"
async-trait = "0.1.74"
prost = "0.11"
parking_lot = "0.11.1"
# raft = { version = "0.7.0", default-features = false, features = [
#     "prost-codec",
# ] } # tikv raft
async-raft = "0.6.1" #{ path = "async-raft/async-raft" } #
tracing = "0.1.40"
# openraft = "0.8"
serde = "1.0.126"
serde_json = "1.0.64"
serde_yaml = "0.9"
anyhow = "1.0.75"
slog = "2.2"
slog-async = "2.3.0"
slog-term = "2.4.0"
regex = "1"
camelpaste = "0.1.0"
tracing-subscriber = "0.3"
ws_derive = { path = "./ws_derive" }
clap = { version = "3", features = ["derive"] }
downcast-rs = "1.2.0"
bincode = "1.3.3"
crossbeam-skiplist = "0.1"
lazy_static = "1.4.0"
axum = "0.6.20"
wasmedge-sdk = { version = "0.10.1" ,features = ["async"]}
async-channel = "2.1.0"
sysinfo = "0.29.10"
ssh2 = "0.9.4"
moka = { version="0.12.1", features = ["sync"]}

rand = "0.8.5"

# slog-envlogger = { version = "2.1.0", optional = true }

[build-dependencies]
prost-build = { version = "0.12" }

[profile.test]
# 0: no optimizations
# 1: basic optimizations
# 2: some optimizations
# 3: all optimizations
# "s": optimize for binary size
# "z": optimize for binary size, but also turn off loop vectorization.
opt-level = 3           # Use slightly better optimizations.
overflow-checks = false # Disable integer overflow checks.
