[workspace]
members = ["src/main"]
resolver = "2"


[workspace.package]
version = "0.9.5"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
qp2p = "0.36.4"                                     #{ path = "qp2p" }
tokio = { version = "1.32.0", features = ["full"] }
thiserror = "1.0.50"
# snafu = "0.8.5"
async-trait = "0.1.74"
prost = "0.11"
parking_lot = "0.11.1"
# raft = { version = "0.7.0", default-features = false, features = [
#     "prost-codec",
# ] } # tikv raft
async-raft = "0.6.1"                                                       #{ path = "async-raft/async-raft" } #
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std"] }
# openraft = "0.8"
serde = "1.0.126"
serde_json = "1.0.64"
serde_yaml = "0.9"
anyhow = "1.0.75"
slog = "2.2"
slog-async = "2.3.0"
slog-term = "2.4.0"
regex = "1"
camelpaste = "0.1.0"
ws_derive = { path = "./ws_derive" }
clap = { version = "3", features = ["derive"] }
downcast-rs = "1.2.0"
bincode = "1.3.3"
crossbeam-skiplist = "0.1"
lazy_static = "1.4.0"
axum = { version = "0.6.20", features = ["multipart"] }
async-channel = "2.1.0"
sysinfo = "0.29.10"
ssh2 = "0.9.4"
moka = { version = "0.12.1", features = ["sync"] }
rand = "0.8.5"
slotmap = { version = "1.0" }
prometheus-client = "0.22.1"
tower-http = { version = "0.4.0", features = ["cors"] }
tower = "0.4.0"
sled = "0.34.7"
enum-as-inner = "0.6.0"
reqwest = "0.12.4"
futures = "0.3.30"
zip-extract = "0.1.3"
zip = "0.5.13"
walkdir = "2.5.0"
hyper = { version = "0.14.18", features = ["server"] }
md-5 = "0.10.1"
path-absolutize = "3.0.13"
dashmap = "6.1.0"
base64 = "0.22.1"

[profile.test]
# 0: no optimizations
# 1: basic optimizations
# 2: some optimizations
# 3: all optimizations
# "s": optimize for binary size
# "z": optimize for binary size, but also turn off loop vectorization.
opt-level = 3           # Use slightly better optimizations.
overflow-checks = false # Disable integer overflow checks.
